-- along with this package; see the file COPYING.  If not, write to
-- the Free Software Foundation, Inc., 51 Franklin Street - Fifth Floor,
-- Boston, MA 02110-1301, USA.
--

This file lists user visible changes that were made between releases.  For
more verbose descriptions of these and internal changes see the ChangeLog
files.

Version 0.0.15
--------------

 * Czech translation of the internal help system
 * new components: EPFL-EKV NMOS/PMOS V2.6, rectangular waveguide
 * new libraries added: PMOSFETs, NMOSFETs, Regulators, Varistors and
   Ideal

Version 0.0.14
--------------

 * added coplanar line types to Qucs-Transcalc
 * fixed printing (font sizes) under Win32
 * support for sub- and super-script in graphical text paintings
 * new components: diac, triac, thyristor, logarithmic amplifier,
   HICUM L0 v1.12, potentiometer, equation defined RF device, MESFET

Version 0.0.13
--------------

 * new components: file based current and voltage sources, modular
   opamp, HICUM L2 v2.22

Version 0.0.12
--------------

 * preprocessor selectable in SPICE file component
 * translation into Ukrainian
 * libraries can now contain analog as well as digital subcircuits
 * support for symbolically defined devices
 * new components: exponential voltage and current source
 * added Verilog file component
 * support for digital simulations using Verilog

Version 0.0.11
--------------

 * new devices: HICUM L2 v2.1 and FBH HBT
 * allow equations in subcircuits
 * subcircuits parameters
 * translation into Czech and Catalan
 * tabular scrollbar can be moved directly with mouse cursor dragging
 * better painting and doing with zoom factors > 1
 * some bug fixes
 * some internal restructuring
 * new components in GUI and in library

Version 0.0.10
--------------

 * optimization dialog for ASCO added, preliminary support
 * added an attenuator synthesis application
 * many, many small bug fixes and improvements
 * support for nine-valued VHDL logic